# dm-examples

./: .gitignore  Cargo.toml
assets/heightmaps/: basicmulti.json
script/: convert_vtk_surfaces_to_obj  decimate-files  decimate-mesh  decimate_frames  extract_surface_param_tester  extract_surfaces  generate_video  heightmap_from_png  heightmap_pointcloud_from_png  num_particles_for_extent  paraview_for_run  prune_particles  rsync-server-run.sh  run-salvatore.sh  run_example_and_surface  server.sh  smooth-mesh  tore  vtk-to-stl.py  watch_run
script/meshlab/: decimate-mesh.mlx  smooth-mesh.mlx
src/: lib.rs
src/external_structs/: fib_sphere.rs  mod.rs
src/generators/: fluid.rs  heightfield.rs  mod.rs
src/io/: mod.rs  ply.rs  vtk.rs
src/run/: file_info.rs  manager.rs  mod.rs
