[package]
name = "dm-examples"
version = "0.1.0"
authors = ["rezural <rezural@protonmail.com>"]
edition = "2018"

[features]
parallel = [ "salva3d/parallel", "rapier3d/parallel", "rapier_testbed3d/parallel"]

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
bincode = "1.3.1"
rayon = "1.5.0"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.7"
clap = "2.33.3"
serde_json = "1.0.59"
meval = "0.2.0"
indicatif = "0.15.0"
ply-rs = "0.1.3"
kiss3d = "0.28"
glob = "0.3.0"
alphanumeric-sort = "1.4.0"
rand = "0.7.3"

#salva3d = { version = "0.5,0", features = [ "sampling", "rapier", "rapier-harness" ] }
#rapier3d = { version = "0.4.0", features = [  ] }
#rapier_testbed3d = { version = "0.4.0" , features = [  ] }

salva3d = { path = "vendor/salva/build/salva3d", features = [ "sampling", "rapier" ] }
rapier3d = { path = "vendor/rapier/build/rapier3d" }
rapier_testbed3d = { path = "vendor/rapier/build/rapier_testbed3d" }

nalgebra = { version = "0.23.2", features = [ "serde-serialize" ] }
ncollide3d = "0.26.1"
splashsurf_lib = "0.3"
anyhow = "1.0.35"
vtkio = "0.5.0"
